--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -186,3 +186,12 @@ input[type=number] {
   background: white;
   position: relative;
 }
+
+
+.min-vh-100 {
+  overflow-x: hidden;
+}
+
+.z-99 {
+  z-index: 99;
+}
