--- a/src/Style/AboutStudent.scss
+++ b/src/Style/AboutStudent.scss
@@ -29,6 +29,15 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width:1200px) {
+                padding-right: 40px;
+                display: flex;
+                width: 100%;
+                justify-content: center;
+                margin-bottom: 26px;
+            }
+
+
             .school-about {
                 padding-left: 30px;
                 padding-top: 20px;
