--- a/src/Style/addteacher.scss
+++ b/src/Style/addteacher.scss
@@ -35,7 +35,9 @@
 
         .btn-submit {
             color: $btn-text1;
-            background-color: $btn-clr1;
+            // background-color: $btn-clr1;
+            background-color: $bg-item;
+            color: $white;
             border: none;
             border-radius: 12px;
             padding: 12px 40px;
