--- a/src/Style/slider.scss
+++ b/src/Style/slider.scss
@@ -58,7 +58,7 @@
 
             .slider-img-main  {
                 .slider-img  {
-                    background-color: #187b98;
+                    background-color: $white;
                     transition: 0.5s all;
                     z-index: 99;
 
@@ -71,6 +71,8 @@
 
 
                 }
+
+            
               
             }
 
@@ -105,7 +107,8 @@
                     justify-content: center;
                     align-items: center;
                     font-size: 64px;
-                    color: $dark_yellow;
+                    // color: $dark_yellow;
+                    color: $bg-item;
 
                 }
             }
@@ -216,21 +219,29 @@
                     position: absolute;
                     width: 100%;
                     height: 0;
-                    background-color: $dark_yellow;
+                    // background-color: $dark_yellow;
+                    background-color: $white;
                     bottom: 0;
                     left: 0;
                     z-index: -1;  // Ensures the background color is behind the text
                     transition: height 0.5s ease;
-
+                    // z-index: 10;
+                    color: $black;
                   }
               
                   &:hover::before {
                     height: 100%;
+                    color: $black;
+                    // z-index: 10;
+
                  
                   }
               
                   &:hover {
-                    color: $white; 
+                    // color: $white; 
+                    color: $black; 
+                    z-index: 99;
+                    
                // Text color changes to white on hover
                   }
                 }
@@ -254,7 +265,8 @@
               
                 a {
                   padding-top: 10px !important;
-                  border: 2px solid #FF9B24;
+                //   border: 2px solid #FF9B24;
+                border: 2px solid $bg-item;
                   padding: 10px 40px;
                   border-radius: 50px;
                   color: $black;
