--- a/src/Style/sidebar.scss
+++ b/src/Style/sidebar.scss
@@ -46,12 +46,21 @@
                 transition: 0.2s all;
 
             }
+            &:active {
+                background-color: $primary-color2   !important;
+                 
+            }
         }
 
         .logout {
             width: 88%;
             text-align: start;
         }
+
+        .active {
+            background-color: #00CEC9 !important;
+        }
+
     }
 
 
@@ -77,6 +86,8 @@
         background-color: $bg-item !important;
         color: $white !important;
         border: unset !important;
+        display: flex;
+        justify-content: center;
 
         &:hover {
             background-color: #00CEC9 !important;
@@ -114,73 +125,10 @@
 }
 
 
-// .sidebar {
-//     height: 100%;
-
-//     .list-group {
-
-//         a,
-//         button {
-//             cursor: pointer;
-//             border-radius: 8px;
-//             border: unset !important;
-//             background-color: unset !important;
-//             transition: 0.3s all ease-in;
-//             color: $white;
-//             display: flex;
-//             align-items: center;
-//             padding: 15px 16px;
-//             margin: 12px 0;
-//             white-space: nowrap;
-//             width: 100%;
-//             @media (max-width: 1199px) {
-//                 margin: 8px 0;
-//             }
+.active-link {
+    background-color: #00cec9 !important;
+  }
 
 
-//             &:hover {
-//                 background-color: $primary-color2 !important;
-//                 color: $white;
-//                 border-radius: 8px;
-//             }
-//         }
-//     }
-//     .top-head {
-//         display: flex;
-//         align-items: center;
-//         justify-content: start;
-//         margin-bottom: 24px !important;
+  
 
-//         .brand-name {
-//             font-size: 32px !important;
-//             font-weight: 800;
-//             color: $white !important;
-//         }
-
-//         svg {
-//             color: $white;
-//             font-size: 35px !important;
-//         }
-//     }
-
-// }
-
-// .for-logout-btn {
-//     margin-top: 100px;
-//     border: none;
-//     border-radius: 10px;
-
-//     .list-group-item {
-//         border-radius: 20px;
-//         border: unset !important;
-//         background-color: unset !important;
-//         color: $white;
-//         display: flex;
-//         align-items: center;
-//         white-space: nowrap;
-
-//         &:hover {
-//             background-color: $primary-color2 !important;
-//         }
-//     }
-// }
