--- a/src/Style/AllTeachers.scss
+++ b/src/Style/AllTeachers.scss
@@ -50,7 +50,9 @@
     position: relative;
     margin-top: 30px;
 
+
     @media (max-width:992px ) {
-        margin-top: 90px;
+        margin: 70px 0;
+        border-radius: 13px;
     }
 }
