--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -104,50 +104,6 @@ input[type=number] {
 
 }
 
-
-/* styles.css (or any appropriate CSS file) */
-
-// .table-container {
-//   overflow-y: auto;
-//   max-height: 100%; /* Adjust the height as needed */
-// }
-// .fixed-header-one {
-//   position: sticky;
-//   top: 0;
-//   background-color: white; /* Ensure the background is white for header visibility */
-//   z-index: 10; /* Ensure it's above other content */
-
-//   @media (max-width:768px) {
-//     position: static;
-//   }
-
-
-  
-// }
-// .fixed-header {
-//   padding-bottom: 10px;
-//   @media (max-width:768px) {
-//     position: static;
-//   }
-
-// }
-// .fixed-header th {
-//   position: sticky;
-//   top: 70px;
-//   background-color: #187b98 !important; /* Ensure the background is white for header visibility */
-//   z-index: 10; /* Ensure it's above other content */
-//   color: #fff !important;
-//   font-weight: 500;
-
-
-//   @media (max-width:768px) {
-//     position: static;
-//   }
-
-  
-// }
-
-
 .table-container {
   max-height: 650px;
 }
@@ -194,4 +150,17 @@ input[type=number] {
 
 .z-99 {
   z-index: 99;
+}
+
+.main-content{
+  overflow-x: hidden;
+
+}
+
+
+
+
+
+.list-group-item.active {
+  background-color: #00cec9;
 }
