--- a/src/Style/_var.scss
+++ b/src/Style/_var.scss
@@ -28,3 +28,24 @@ $blue_primary:#00CEC9;
 $light_orange: #FFF8EB ; 
 
 $dark_yellow: #FF9B24 ;
+
+$light_green:  #14A44D; 
+
+$light_clr:#dee2e6;
+
+$dark_blue:#3B71CA;
+
+$similr_to_primary: #007CAF;
+
+$placeholder_clr: #aaa ;
+
+$border_clr:#E9CFCF;
+
+
+
+$bg-orange: #F4EEE5;
+$ClrOrange: #f37335;
+$textClr: #2b2b2b;
+$btn-bg: #565e64;
+$black: #000;
+$pclr: #575757;
