--- a/src/Style/Nav.scss
+++ b/src/Style/Nav.scss
@@ -2,7 +2,7 @@
   .form-control {
     &::placeholder {
       font-size: 0.95rem;
-      color: #aaa;
+      color: $placeholder_clr;
       font-style: italic;
     }
 
@@ -48,7 +48,7 @@
     // box-shadow: #fff 0px px 0px;
 
     @media (max-width:1400px) {
-      color: #000 !important;
+      color: $black !important;
     }
   }
 
