--- a/src/Style/Register.scss
+++ b/src/Style/Register.scss
@@ -19,7 +19,7 @@
 		padding: 50px 20px;
 		width: 400px;
 		border-radius: 20px;
-		border: 1px solid #fff;
+		border: 1px solid $white;
 		backdrop-filter: blur(4px);
 
 		.login-reg-heading {
@@ -27,7 +27,7 @@
 			// margin-bottom: 20px;
 			margin-bottom: 40px;
 			font-size: 40px;
-			color: #fff;
+			color: $white;
 		}
 
 		.input_box {
@@ -44,18 +44,18 @@
 				box-sizing: border-box;
 				padding: 0px 10px;
 				background-color: transparent;
-				color: #fff;
+				color: $white;
 				font-size: 18px;
 				padding-right: 52px;
 				outline: none !important;
 				border: none;
-				border-bottom: 2px solid #fff;
+				border-bottom: 2px solid $white;
 				box-shadow: none !important;
 
 				&::placeholder {
 					font-size: 18px;
 					font-weight: 500;
-					color: #fff;
+					color: $white;
 				}
 			}
 
@@ -65,7 +65,7 @@
 				top: 50%;
 				right: 10px;
 				transform: translateY(-50%);
-				color: #fff;
+				color: $white;
 			}
 		}
 		
@@ -80,7 +80,7 @@
 				border-radius: 20px;
 				font-size: 18px;
 				font-weight: bold;
-				background-color: #fff;
+				background-color: $white;
 				border: none;
 				outline: none;
 				transition: .3s;
@@ -88,15 +88,15 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				color: #000;
+				color: $black;
 				text-decoration: none;
-				border: 1px solid #fff;
+				border: 1px solid $white;
 
 				&:hover {
 					cursor: pointer;
 					background-color: transparent;
-					color: #fff;
-					border: 1px solid #fff;
+					color: $white;
+					border: 1px solid $white;
 				}
 			}
 		}
