--- a/src/Style/aboutteacher.scss
+++ b/src/Style/aboutteacher.scss
@@ -60,7 +60,7 @@
     }
 
     .teacher-admin-form {
-        background: #fff;
+        background: $white;
         padding: 30px;
         border-radius: 8px;
         padding-top: 40px;
@@ -120,7 +120,7 @@
             align-items: center;
             gap: 0.2rem;
             background-color: $btn-clr4;
-            color: #000;
+            color: $black;
             border-radius: 8px;
             padding: 8px;
             color: $white;
