--- a/src/Style/addteacher.scss
+++ b/src/Style/addteacher.scss
@@ -7,7 +7,7 @@
 .teacher-from {
     overflow-x: hidden !important;
     border-radius: 0.375rem;
-    background: #ffffff;
+    background: $white;
     margin-top: 30px;
     padding: 1.5rem;
 
