--- a/src/Style/Bokpreloader.scss
+++ b/src/Style/Bokpreloader.scss
@@ -1,12 +1,64 @@
+// .book-preloader {
+//     width: 100%;
+
+
+//     .book {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         height: 100vh;
+//         background-color: transparent !important;
+//     }
+// }
+
+// with blur 
+
+
+// .book-preloader {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     // background-color: rgba(255, 255, 255, 0.8);
+//     background: rgba(255, 255, 255, 0.5);
+//     backdrop-filter: blur(10px);
+
+
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     z-index: 1000;
+//     /* Ensure it covers the content */
+// }
+
+
+// without sidebar blur 
+
 .book-preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    //background-color: $primary-color2;
+    background-color: rgba(141, 224, 242, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    /*Ensureitcoversthecontent*/
     width: 100%;
     height: 100vh;
+    
 
     .book {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: transparent !important;
+        margin-left: 150px;
+
+        @media (max-width:992px) {
+            margin-left: 0 !important;
+        }
+
+
     }
 }
