--- a/src/Style/AllSchools.scss
+++ b/src/Style/AllSchools.scss
@@ -30,6 +30,7 @@
             background-color: $bg-item;
             color: $white;
             font-weight: 500;
+            cursor: pointer;
 
             &:hover {
                 background-color: $primary-color2;
